fix footer spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -139,4 +139,9 @@ footer {
       padding: 10px 45px;
     }
   }
+
+  #footer-text {
+    line-height: 1.7;
+    width: 60%;
+  }
 }
